--- a/style.css
+++ b/style.css
@@ -221,3 +221,97 @@ a {
     color: #707070;
     margin-top: 16px;
 }
+
+
+
+
+
+
+
+
+
+
+/* ========= Donate Plan Card ======== */
+
+#get-update-section {
+    margin-top: 130px;
+}
+
+.update-text {
+    text-align: center;
+}
+
+.update-text h1 {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+}
+
+.update-text p {
+    font-size: 18px;
+    line-height: 28px;
+    width: 691px;
+    margin: 20px auto 50px auto;
+}
+
+#get-update-form {
+    background-color: #FFF4D6;
+    width: 809px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.form-area {
+    padding-top: 76px;
+    padding-left: 189px;
+}
+
+#get-update-form #email {
+    width: 275px;
+    height: 48px;
+    border: none;
+    background-color: #D9D9D9;
+    padding-left: 17px;
+}
+
+#get-update-form #submit {
+    width: 157px;
+    height: 48px;
+    background-color: tomato;
+    color: white;
+    border: none;
+    margin-left: -3px;
+}
+
+
+
+
+
+
+/* ==================== Footer Area =================== */
+footer {
+    background-color: #0B0D17;
+    max-width: 1440px;
+    height: 177px;
+    margin-top: 130px;
+}
+
+#footer-text-area {
+    text-align: center;
+    padding-top: 43px;
+}
+
+#footer-text-area h1 {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 44px;
+    color: tomato;
+}
+
+#footer-text-area p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: white;
+    margin-top: 24px;
+}
