--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ footer {
 }
 
 #footer-text-area h1 {
+    font-family: 'Lobster', cursive;
     font-weight: 400;
     font-size: 36px;
     line-height: 44px;
