--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ a {
     margin: 20px auto 50px auto;
 }
 
-/* ====== Donate Today Ampunt ====== */
+/* ====== Donate Today Amount Section ====== */
 
 #donate-today-amount {
     display: flex;
